--- a/src/components/card/_card.scss
+++ b/src/components/card/_card.scss
@@ -10,6 +10,9 @@
   }
   &.iastate22-card--profile-with-modal {
     cursor: grab;
+    @include media-breakpoint-up(lg) {
+      cursor: auto;
+    }
   }
   &.clickable {
     cursor: pointer;
@@ -95,6 +98,13 @@
     right: 0;
     border: none;
     background-color: transparent;
+    @include media-breakpoint-up(lg) {
+      bottom: rem(30);
+    }
+    cursor: pointer;
+    &:hover {
+      color: $iastate-maroon;
+    }
   }
 }
 
@@ -107,6 +117,10 @@
   .iastate22-card--profile-with-modal & {
     padding: rem(12) rem(22);
     min-height: rem(210);
+    @include media-breakpoint-up(lg) {
+      padding: rem(23);
+      min-height: rem(239);
+    }
   }
 }
 
@@ -147,6 +161,11 @@
     font-size: rem(18);
     line-height: (23 / 18);
     margin-bottom: rem(13);
+    @include media-breakpoint-up(lg) {
+      font-size: rem(21);
+      line-height: (29 / 21);
+      margin-bottom: rem(23);
+    }
   }
   a {
     color: currentColor;
@@ -174,5 +193,83 @@
     font-size: rem(16);
     line-height: (20 / 16);
     padding-bottom: rem(30);
+  }
+}
+
+// modal popup window styles for iastate22-card--profile-with-modal variant
+.iastate22-card--profile-with-modal {
+  .iastate22-modal__container {
+    padding: rem(37);
+    width: 90%;
+  }
+  .iastate22-modal__media-name-wrap {
+    display: flex;
+    align-items: center;
+    margin-left: rem(-37);
+    margin-right: rem(-37);
+    @include media-breakpoint-up(md) {
+      flex-direction: column;
+      flex: 0 1 auto;
+      width: 36%;
+      margin: 0;
+    }
+  }
+  .iastate22-modal__media,
+  .iastate22-modal__name-role-wrap {
+    flex: 1 1 0;
+  }
+  .iastate22-modal__media {
+    padding-right: rem(10);
+    @include media-breakpoint-up(md) {
+      flex: 0 1 auto;
+      width: 100%;
+      padding: 0;
+    }
+  }
+  .iastate22-modal__name-role-wrap {
+    padding-left: rem(10);
+    @include media-breakpoint-up(md) {
+      margin-top: rem(15);
+      padding: 0;
+      text-align: center;
+    }
+  }
+  .iastate22-card__name {
+    margin-bottom: rem(6);
+  }
+  .iastate22-card__role {
+    padding: 0;
+  }
+  .iastate22-modal__content {
+    @include media-breakpoint-up(md) {
+      padding-top: 0;
+      padding-bottom: rem(20);
+    }
+  }
+  .iastate22-modal__title {
+    font-family: $merriweather;
+    font-weight: 700;
+    font-size: rem(30);
+    line-height: (44 / 30);
+  }
+  .iastate22-modal__body-content {
+    color: $iastate-maroon;
+    font-size: rem(18);
+    line-height: (29 / 18);
+  }
+
+  .iastate22-modal__content-cta {
+    color: $iastate-maroon;
+    font-family: $nimbus-sans-bold;
+    font-weight: 700;
+    font-size: rem(18);
+    line-height: (26 / 18);
+  }
+  a {
+    color: $iastate-red;
+    transition: 0.2s color ease-in-out;
+    &:hover {
+      color: $iastate-maroon;
+    }
   }
 }
