--- a/src/components/card/card--profile-with-modal.twig
+++ b/src/components/card/card--profile-with-modal.twig
@@ -7,18 +7,25 @@
 		<div class="iastate22-card__name"><p>{{ name }}</p></div>
     <div class="iastate22-card__role"><p>{{ role }}</p></div>
     <button class="iastate22-card__cta" data-micromodal-trigger="{{ modal.id }}">{{ cta.text }}</button>
-    <div class="iastate22-modal" id="{{ modal.id }}" aria-hidden="false">
+    <div class="iastate22-modal iastate22-card--profile-with-modal" id="{{ modal.id }}" aria-hidden="false">
       <div class="iastate22-modal__overlay" tabindex="-1" data-micromodal-close>
         <div class="iastate22-modal__container{% if image %} iastate22-modal__container-with-media{% endif %}" id="{{ modal.id }}-content" role="dialog" aria-modal="true" aria-labelledby="{{ modal.id }}-title">
           <button class="iastate22-modal__close" aria-label="Close modal" data-micromodal-close><i class="fa-light fa-xmark"></i></button>
-          <div class="iastate22-modal__media">
-            <img src="{{ modal.image|path }}" alt="">
+          <div class="iastate22-modal__media-name-wrap">
+            <div class="iastate22-modal__media">
+              <img src="{{ image|path }}" alt="">
+            </div>
+            <div class="iastate22-modal__name-role-wrap">
+              <div class="iastate22-card__name"><p>{{ name }}</p></div>
+              <div class="iastate22-card__role"><p>{{ role }}</p></div>
+            </div>
           </div>
           <div class="iastate22-modal__content">
-            <h2 class="iastate22-modal__title" id="{{ modal.id }}-title">{{ modal.title }}</h2>
-            {{ modal.content|raw }}
+            <h2 class="iastate22-modal__title" id="{{ modal.id }}-title">{{ title }}</h2>
+            <div class="iastate22-modal__body-content">{{ modal.content|raw }}</div>
             <div class="iastate22-modal__content-cta">
-              {{ modal.call_to_action|raw }}
+              <p>{{ modal.call_to_action_intro }}</p>
+              <a href="{{ modal.call_to_action.url }}">{{ modal.call_to_action.title }}</a>
             </div>
           </div>
         </div>
