--- a/src/components/pages/_home.scss
+++ b/src/components/pages/_home.scss
@@ -664,6 +664,131 @@
   }
 }
 
+// home events section
+.home-events {
+  @extend %outer-pad-x;
+  padding-top: rem(55);
+  padding-bottom: rem(55);
+  background-color: $off-white;
+  @include media-breakpoint-up(xl) {
+    padding-right: 0;
+  }
+  .home-link-button {
+    justify-content: center;
+  }
+}
+.home-events__headline {
+  text-align: center;
+  @extend %h2-yellow-border;
+  width: 60%;
+  margin: 0 auto;
+  line-height: (37 / 30);
+  &:after {
+    left: 50%;
+    margin-left: -25px;
+  }
+}
+
+.home-events__event-list,
+.home-events__news-list {
+  position: relative;
+  &:before {
+    content: "Event";
+    position: absolute;
+    top: rem(-19);
+    left: rem(25);
+    background-color: $iastate-red;
+    padding: rem(4) rem(16);
+    color: $white;
+    font-family: $nimbus-sans-bold;
+    font-weight: 700;
+    font-size: rem(20);
+    line-height: (30 / 20);
+  }
+  ul {
+    box-shadow: rem(9) rem(13) rem(20) rgba($black, 0.16);
+    padding: rem(32) rem(20) rem(16);
+    background-color: $white;
+    margin-top: rem(65);
+    margin-bottom: rem(30);
+    li {
+      margin-bottom: rem(26);
+      a {
+        color: $iastate-maroon;
+        font-family: $nimbus-sans-bold;
+        font-weight: 700;
+        font-size: rem(20);
+        line-height: (31 / 20);
+        text-decoration-thickness: rem(1);
+        text-underline-offset: rem(2);
+        transition: 0.2s color ease-in-out;
+        &:hover {
+          color: $iastate-red;
+        }
+      }
+      .home-events__event-date,
+      .home-events__news-date {
+        color: $iastate-red;
+        font-family: $nimbus-sans-bold;
+        font-weight: 700;
+        font-size: rem(18);
+        line-height: (25 / 18);
+      }
+    }
+  }
+}
+
+.home-events__event-list {
+  ul {
+    li {
+      display: flex;
+      align-items: flex-start;
+      .home-events__event-date {
+        flex: 0 0 auto;
+        width: rem(50);
+        text-align: center;
+      }
+      a {
+        margin-left: rem(53);
+        position: relative;
+        top: rem(-4);
+        &:before {
+          content: "";
+          position: absolute;
+          top: rem(6);
+          bottom: 0;
+          left: rem(-32);
+          min-height: rem(50);
+          border-left: rem(2) solid $iastate-gold;
+        }
+      }
+    }
+  }
+}
+
+.home-events__news-list {
+  margin-top: rem(105);
+  &:before {
+    content: "News";
+  }
+  &:after {
+    content: "";
+    position: absolute;
+    top: rem(-65);
+    left: rem(-36);
+    right: rem(-36);
+    border-top: rem(2) solid $iastate-gold;
+  }
+  li {
+    a {
+      display: block;
+    }
+    .home-events__news-date {
+      // color: $iastate-red;
+    }
+  }
+}
+
 // home social section
 .home-social {
   background-color: $iastate-red;
@@ -759,7 +884,7 @@
     top: 0;
     left: rem(-36);
     right: rem(-36);
-    background-color: $white;
+    background-color: $off-white;
     height: rem(48);
     @include media-breakpoint-up(md) {
       left: rem(-70);
@@ -1184,8 +1309,8 @@
   color: $iastate-maroon;
   font-family: $nimbus-sans-bold;
   font-weight: 700;
-  font-size: rem(16);
-  line-height: (26 / 16);
+  font-size: rem(18);
+  line-height: (26 / 18);
   text-decoration: none;
   .home-link-button__arrow-wrap {
     border: rem(2) solid $iastate-maroon;
@@ -1195,6 +1320,7 @@
     display: inline-block;
     transition: 0.2s width ease-in-out;
     margin-right: rem(12);
+    position: relative;
     flex: 0 0 auto;
     .arrow {
       right: initial;
