--- a/src/components/pages/_home.scss
+++ b/src/components/pages/_home.scss
@@ -210,7 +210,14 @@
     padding-top: rem(50);
   }
   @include media-breakpoint-up(xl) {
-    padding-right: rem(190);
+    padding-right: rem(110);
+    padding-left: rem(80);
+  }
+  @include media-breakpoint-up(xxl) {
+    padding-right: rem(157);
+  }
+  .iastate22-button {
+    white-space: nowrap;
   }
 }
 
@@ -280,6 +287,7 @@
   margin-top: rem(37);
   @include media-breakpoint-up(md) {
     flex-direction: row-reverse;
+    align-items: center;
   }
 }
 
@@ -289,19 +297,36 @@
   @include media-breakpoint-up(md) {
     order: initial;
     flex: 0 1 auto;
-    width: 25%;
+    width: 50%;
+    padding-left: rem(40);
+    margin-top: 0;
+  }
+  @include media-breakpoint-up(xl) {
+    width: 35%;
+  }
+  @include media-breakpoint-up(xxl) {
+    width: 30%;
+    padding-left: rem(68);
   }
 }
 
 .home-community__callout-media-statistic-wrap {
   @include media-breakpoint-up(md) {
     flex: 0 1 auto;
-    width: 75%;
+    width: 50%;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     flex-direction: row-reverse;
     justify-content: flex-start;
+    padding-right: rem(20);
+    position: relative;
+  }
+  @include media-breakpoint-up(xl) {
+    width: 65%;
+  }
+  @include media-breakpoint-up(xl) {
+    width: 70%;
   }
 }
 
@@ -320,8 +345,18 @@
   order: 3;
   @include media-breakpoint-up(md) {
     flex: 0 1 auto;
-    width: 40%;
     order: initial;
+    width: 80%;
+    right: rem(-12);
+    top: rem(14);
+  }
+  @include media-breakpoint-up(xl) {
+    right: 0;
+    top: initial;
+    max-width: rem(520);
+  }
+  @include media-breakpoint-up(xxl) {
+    right: rem(45);
   }
   &:before {
     padding-top: 77.49%;
@@ -333,13 +368,30 @@
 
 .home-community__callout-media-two {
   display: none;
+  @extend %responsive-img;
   @include media-breakpoint-up(md) {
     display: block;
     flex: 0 1 auto;
-    width: 40%;
     order: 1;
+    z-index: 2;
+    margin-bottom: rem(-100);
+    width: 96%;
+    left: rem(30);
+    top: rem(-20);
   }
-  @extend %responsive-img;
+  @include media-breakpoint-up(lg) {
+    margin-bottom: rem(-55);
+    margin-top: rem(-30);
+    top: initial;
+  }
+  @include media-breakpoint-up(xl) {
+    margin-top: rem(50);
+    width: 60%;
+    max-width: rem(478);
+  }
+  @include media-breakpoint-up(xxl) {
+    margin-top: rem(40);
+  }
   &:before {
     @include media-breakpoint-up(md) {
       padding-top: 60.67%;
@@ -360,8 +412,27 @@
   @include media-breakpoint-up(md) {
     order: initial;
     margin: 0;
-    display: block;
     text-align: center;
+    min-height: rem(294);
+    flex-direction: column;
+    justify-content: center;
+    padding: rem(30) rem(50);
+    left: rem(-20);
+  }
+  @include media-breakpoint-up(lg) {
+    left: rem(-70);
+    margin-top: rem(-30);
+    z-index: 2;
+  }
+  @include media-breakpoint-up(xl) {
+    position: absolute;
+    left: rem(-30);
+    z-index: 2;
+    margin-top: rem(130);
+  }
+  @include media-breakpoint-up(xxl) {
+    left: initial;
+    right: rem(510);
   }
 
   &:before {
@@ -387,6 +458,8 @@
   margin: 0;
   @include media-breakpoint-up(md) {
     width: 100%;
+    font-size: rem(66);
+    line-height: (62 / 66);
   }
 }
 .home-community__callout-statistic-description {
@@ -402,6 +475,9 @@
   @include media-breakpoint-up(md) {
     width: 100%;
     padding-left: 0;
+    font-size: rem(16);
+    line-height: (26 / 16);
+    margin-top: rem(15);
   }
 }
 
@@ -413,13 +489,8 @@
     padding-top: rem(158);
     padding-bottom: rem(190);
   }
-  .iastate22-modal__container {
-    padding: rem(45) 0 0 0;
-    width: 100%;
-    max-width: rem(1000);
-  }
   .iastate22-blockquote__portrait {
-    max-width: none;
+    max-width: rem(258);
     width: 75%;
     cursor: pointer;
     @include media-breakpoint-up(xl) {
@@ -461,6 +532,18 @@
   .video-embed__media-wrap {
     &:after {
       display: none;
+    }
+  }
+}
+
+.iastate22-modal--video {
+  .iastate22-modal__container {
+    padding: rem(45) 0 0 0;
+    width: 100%;
+    max-width: rem(1000);
+    iframe {
+      width: 100%;
+      margin-bottom: rem(-8);
     }
   }
 }
@@ -696,7 +779,7 @@
 }
 
 // home events section
-.home-events {
+.home-events-news {
   @extend %outer-pad-x;
   padding-top: rem(55);
   padding-bottom: rem(55);
@@ -772,21 +855,27 @@
 
     li {
       margin-bottom: rem(26);
-      a {
+      .home-events-news__item-title {
+        margin: 0;
+        padding: 0;
         color: $iastate-maroon;
         font-family: $nimbus-sans-bold;
         font-weight: 700;
         font-size: rem(20);
         line-height: (31 / 20);
-        text-decoration-thickness: rem(1);
-        text-underline-offset: rem(2);
-        transition: 0.2s color ease-in-out;
         @include media-breakpoint-up(lg) {
           font-size: rem(21);
           line-height: (31 / 21);
         }
-        &:hover {
-          color: $iastate-red;
+
+        a {
+          color: currentColor;
+          text-decoration-thickness: rem(1);
+          text-underline-offset: rem(2);
+          transition: 0.2s color ease-in-out;
+          &:hover {
+            color: $iastate-red;
+          }
         }
       }
       .home-events__event-date,
@@ -845,25 +934,27 @@
   }
   ul {
     li {
-      display: flex;
-      align-items: flex-start;
-      .home-events__event-date {
-        flex: 0 0 auto;
-        width: rem(50);
-        text-align: center;
-      }
-      a {
-        margin-left: rem(53);
-        position: relative;
-        top: rem(-4);
-        &:before {
-          content: "";
-          position: absolute;
-          top: rem(6);
-          bottom: 0;
-          left: rem(-32);
-          min-height: rem(50);
-          border-left: rem(2) solid $iastate-gold;
+      article {
+        display: flex;
+        align-items: flex-start;
+        .home-events__event-date {
+          flex: 0 0 auto;
+          width: rem(50);
+          text-align: center;
+        }
+        .home-events-news__item-title {
+          margin-left: rem(53);
+          position: relative;
+          top: rem(-4);
+          &:before {
+            content: "";
+            position: absolute;
+            top: rem(6);
+            bottom: 0;
+            left: rem(-32);
+            min-height: rem(50);
+            border-left: rem(2) solid $iastate-gold;
+          }
         }
       }
     }
@@ -903,8 +994,10 @@
 
 // desktop version of combined news and events grid
 .home-news-events-grid-wrap {
+  display: none;
   @include media-breakpoint-up(lg) {
     margin-top: rem(110);
+    display: block;
   }
   .home-news-events-grid {
     @include media-breakpoint-up(lg) {
@@ -926,6 +1019,14 @@
       @include media-breakpoint-up(xl) {
         width: 32%;
       }
+      &.clickable {
+        cursor: pointer;
+        &:hover {
+          a {
+            color: $iastate-red;
+          }
+        }
+      }
       &:before {
         @include media-breakpoint-up(lg) {
           content: "Event";
@@ -945,32 +1046,37 @@
       // events items(odd)
       &:nth-child(odd) {
         @include media-breakpoint-up(lg) {
-          display: flex;
-          align-items: flex-start;
           min-height: rem(175);
         }
-        .home-events__event-date {
+        article {
           @include media-breakpoint-up(lg) {
-            flex: 0 0 auto;
-            width: rem(50);
-            text-align: center;
+            display: flex;
+            align-items: flex-start;
           }
-        }
-        a {
-          @include media-breakpoint-up(lg) {
-            margin-left: rem(53);
-            position: relative;
-            top: rem(-4);
-          }
-          &:before {
+
+          .home-events__event-date {
             @include media-breakpoint-up(lg) {
-              content: "";
-              position: absolute;
-              top: rem(6);
-              bottom: 0;
-              left: rem(-32);
-              min-height: rem(115);
-              border-left: rem(2) solid $iastate-gold;
+              flex: 0 0 auto;
+              width: rem(50);
+              text-align: center;
+            }
+          }
+          .home-events-news__item-title {
+            @include media-breakpoint-up(lg) {
+              margin-left: rem(53);
+              position: relative;
+              top: rem(-4);
+            }
+            &:before {
+              @include media-breakpoint-up(lg) {
+                content: "";
+                position: absolute;
+                top: rem(6);
+                bottom: 0;
+                left: rem(-32);
+                min-height: rem(115);
+                border-left: rem(2) solid $iastate-gold;
+              }
             }
           }
         }
