--- a/src/components/pages/_home.scss
+++ b/src/components/pages/_home.scss
@@ -546,9 +546,20 @@
     padding: rem(45) 0 0 0;
     width: 100%;
     max-width: rem(1000);
-    iframe {
+    .iastate22-modal__media-wrap {
+      position: relative;
+      overflow: hidden;
       width: 100%;
-      margin-bottom: rem(-8);
+      padding-top: 56.25%;
+      iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+      }
     }
   }
 }
