--- a/src/components/pages/home.twig
+++ b/src/components/pages/home.twig
@@ -75,7 +75,8 @@
     <div class="iastate22-modal__overlay" tabindex="-1" data-micromodal-close>
       <div class="iastate22-modal__container{% if home_blockquote.modal.image %} iastate22-modal__container-with-media{% endif %}" id="{{ home_blockquote.modal.id }}-content" role="dialog" aria-modal="true" aria-labelledby="{{ home_blockquote.modal.id }}-title">
         <button class="iastate22-modal__close" aria-label="Close modal" data-micromodal-close><span class="visible-for-screen-readers">Close YouTube Video: {{ home_blockquote.modal.video.title }}</span><i class="fa-light fa-xmark"></i></button>
-        <div class="iastate22-modal__media" data-vid="{{ home_blockquote.modal.video.video_id }}">
+        <div class="iastate22-modal__media-wrap">
+          <div class="iastate22-modal__media" data-vid="{{ home_blockquote.modal.video.video_id }}"></div>
         </div>
       </div>
     </div>
