--- a/src/components/card/card--profile-with-modal.twig
+++ b/src/components/card/card--profile-with-modal.twig
@@ -10,7 +10,7 @@
     <div class="iastate22-modal iastate22-card--profile-with-modal" id="{{ modal.id }}" aria-hidden="false">
       <div class="iastate22-modal__overlay" tabindex="-1" data-micromodal-close>
         <div class="iastate22-modal__container{% if image %} iastate22-modal__container-with-media{% endif %}" id="{{ modal.id }}-content" role="dialog" aria-modal="true" aria-labelledby="{{ modal.id }}-title">
-          <button class="iastate22-modal__close" aria-label="Close modal" data-micromodal-close><i class="fa-light fa-xmark"></i></button>
+          <button class="iastate22-modal__close" aria-label="Close modal" data-micromodal-close><i class="fa-light fa-xmark" aria-hidden="true"></i></button>
           <div class="iastate22-modal__media-name-wrap">
             <div class="iastate22-modal__media">
               <img src="{{ image|path }}" alt="">
