--- a/src/components/modal/modal.twig
+++ b/src/components/modal/modal.twig
@@ -3,7 +3,7 @@
 <div class="iastate22-modal" id="{{ id }}" aria-hidden="false">
   <div class="iastate22-modal__overlay" tabindex="-1" data-micromodal-close>
     <div class="iastate22-modal__container{% if image %} iastate22-modal__container-with-media{% endif %}" id="{{ id }}-content" role="dialog" aria-modal="true" aria-labelledby="{{ id }}-title">
-      <button class="iastate22-modal__close" aria-label="Close modal" data-micromodal-close><i class="fa-light fa-xmark"></i></button>
+      <button class="iastate22-modal__close" aria-label="Close modal" data-micromodal-close><i class="fa-light fa-xmark" aria-hidden="true"></i></button>
       {% if image %}
       <div class="iastate22-modal__media">
         <img src="{{ image|path }}" alt="">
