--- a/src/components/pages/home.twig
+++ b/src/components/pages/home.twig
@@ -74,7 +74,7 @@
   <div class="iastate22-modal iastate22-modal--video" id="{{ home_blockquote.modal.id }}" aria-hidden="false">
     <div class="iastate22-modal__overlay" tabindex="-1" data-micromodal-close>
       <div class="iastate22-modal__container{% if home_blockquote.modal.image %} iastate22-modal__container-with-media{% endif %}" id="{{ home_blockquote.modal.id }}-content" role="dialog" aria-modal="true" aria-labelledby="{{ home_blockquote.modal.id }}-title">
-        <button class="iastate22-modal__close" aria-label="Close modal" data-micromodal-close><span class="visible-for-screen-readers">Close YouTube Video: {{ home_blockquote.modal.video.title }}</span><i class="fa-light fa-xmark"></i></button>
+        <button class="iastate22-modal__close" aria-label="Close modal" data-micromodal-close><span class="visible-for-screen-readers">Close YouTube Video: {{ home_blockquote.modal.video.title }}</span><i class="fa-light fa-xmark" aria-hidden="true"></i></button>
         <div class="iastate22-modal__media-wrap">
           <div class="iastate22-modal__media" data-vid="{{ home_blockquote.modal.video.video_id }}"></div>
         </div>
@@ -131,7 +131,7 @@
     <img src="{{ location.image|path }}" alt="" />
   </div>
   <div class="home-location__caption">
-    <i class="fa-solid fa-location-dot"></i>
+    <i class="fa-solid fa-location-dot" aria-hidden="true"></i>
     <div class="home-location__caption-text"><p>{{ location.caption.text }} <a href="{{ location.caption.link.url }}">{{ location.caption.link.text }}</a></p></div>
   </div>
 </div>
@@ -142,7 +142,7 @@
     <ul>
       {% for event in events_news.event_list %}
       <li>
-        <article>
+        <article class="home-events-news__item">
           <span class="home-events__event-date">{{ event.date|date("M d") }}</span>
           <h2 class="home-events-news__item-title"><a href="{{ event.link.url}}">{{ event.link.title}}</a></h2>
         </article>
@@ -156,7 +156,7 @@
     <ul>
       {% for news in events_news.news_list %}
       <li data-image="{{ news.imageSrc }}">
-        <article>
+        <article class="home-events-news__item">
           <h2 class="home-events-news__item-title"><a href="{{ news.link.url}}">{{ news.link.title}}</a></h2>
           <span class="home-events__news-date">{{ news.date|date("F d") }}</span>
         </article>
@@ -174,25 +174,25 @@
     <ul class="home-social__social-links">
       <li>
         <a href="#" target="_blank">
-          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-twitter" aria-hidden="true"></i>
           <span class="visible-for-screen-readers">Twitter</span>
         </a>
       </li>
       <li>
         <a href="#" target="_blank">
-          <i class="fak fa-id5-instagram"></i>
+          <i class="fak fa-id5-instagram" aria-hidden="true"></i>
           <span class="visible-for-screen-readers">Instagram</span>
         </a>
       </li>
       <li>
         <a href="#" target="_blank">
-          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-facebook" aria-hidden="true"></i>
           <span class="visible-for-screen-readers">Facebook</span>
         </a>
       </li>
       <li>
         <a href="#" target="_blank">
-          <i class="fa-brands fa-youtube"></i>
+          <i class="fa-brands fa-youtube" aria-hidden="true"></i>
           <span class="visible-for-screen-readers">YouTube</span>
         </a>
       </li>
