--- a/src/components/site-footer/site-footer.twig
+++ b/src/components/site-footer/site-footer.twig
@@ -6,25 +6,25 @@
       <ul class="site-footer__social">
         <li>
           <a href="#" target="_blank">
-            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-twitter" aria-hidden="true"></i>
             <span class="visible-for-screen-readers">Twitter</span>
           </a>
         </li>
         <li>
           <a href="#" target="_blank">
-            <i class="fak fa-id5-instagram"></i>
+            <i class="fak fa-id5-instagram" aria-hidden="true"></i>
             <span class="visible-for-screen-readers">Instagram</span>
           </a>
         </li>
         <li>
           <a href="#" target="_blank">
-            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-facebook" aria-hidden="true"></i>
             <span class="visible-for-screen-readers">Facebook</span>
           </a>
         </li>
         <li>
           <a href="#" target="_blank">
-            <i class="fa-brands fa-youtube"></i>
+            <i class="fa-brands fa-youtube" aria-hidden="true"></i>
             <span class="visible-for-screen-readers">YouTube</span>
           </a>
         </li>
