--- a/src/components/pages/_home.scss
+++ b/src/components/pages/_home.scss
@@ -762,8 +762,11 @@
     position: absolute;
     display: flex;
     align-items: center;
-    top: rem(81);
     max-width: rem(432);
+    top: rem(40);
+  }
+  @include media-breakpoint-up(xl) {
+    top: rem(81);
   }
   .fa-location-dot {
     color: $iastate-gold;
@@ -783,6 +786,9 @@
   font-weight: 700;
   font-size: rem(16);
   line-height: (21 / 16);
+  @include media-breakpoint-up(lg) {
+    margin-left: rem(20);
+  }
   a {
     color: $iastate-gold;
     font-family: $nimbus-sans-bold;
