--- a/src/components/home-announcement/_home-announcement.scss
+++ b/src/components/home-announcement/_home-announcement.scss
@@ -7,7 +7,8 @@
   position: relative;
   z-index: 1;
   margin-left: auto;
-  transform: translateY(-50%);
+  margin-top: rem(-36);
+  margin-bottom: rem(36);
 }
 
 .home-announcement__text {
