extending homepage top navigation background and border-bottom past max-width for wider monitors

--- a/src/components/site-header/_site-header.scss
+++ b/src/components/site-header/_site-header.scss
@@ -164,6 +164,12 @@
       background-color: transparent;
       border-bottom: none;
     }
+    .headroom--not-top & {
+      .home & {
+        background-color: rgba($white, 0.95);
+        border-bottom: rem(1) solid $grey4;
+      }
+    }
   }
   ul {
     display: flex;
