updating homepage block-quote video play button positioning

--- a/src/components/pages/_home.scss
+++ b/src/components/pages/_home.scss
@@ -506,6 +506,9 @@
   }
   .video-embed__button {
     top: 78%;
+    max-width: rem(56);
+    max-height: rem(56);
+    margin-left: rem(-28);
   }
   .iastate22-modal__media {
     &:before {
