--- a/src/components/home-announcement/_home-announcement.scss
+++ b/src/components/home-announcement/_home-announcement.scss
@@ -9,6 +9,9 @@
   margin-left: auto;
   margin-top: rem(-36);
   margin-bottom: rem(36);
+  @include media-breakpoint-up(sm) {
+    padding-left: rem(20);
+  }
 }
 
 .home-announcement__text {
@@ -18,6 +21,9 @@
   font-weight: 700;
   line-height: (26 / 16);
   padding-left: rem(23);
+  @include media-breakpoint-up(sm) {
+    padding-left: rem(17);
+  }
   a {
     color: $iastate-gold;
     margin-left: rem(2);
@@ -27,7 +33,9 @@
   }
 }
 
-.home-announcement__icon {
+.fa-iastate22-info-box,
+.fa-iastate22-exclamation-point {
   flex: 0 0 auto;
-  width: rem(32);
+  color: $iastate-gold;
+  font-size: rem(30);
 }
